tests/compile_fail/invalid_authored_struct_literal.stderr
error[E0451]: fields `property` and `value` of struct `AuthoredDeclaration` are private
 --> tests/compile_fail/invalid_authored_struct_literal.rs:8:9
  |
7 |     let _declaration = AuthoredDeclaration {
  |                        ------------------- in this type
8 |         property: AuthoredProperty::Property(Property::Color),
  |         ^^^^^^^^ private field
9 |         value: AuthoredValue::Value(Value::Color(Color::BLACK)),
  |         ^^^^^ private field

error[E0451]: field `values` of struct `AuthoredDeclarations` is private
  --> tests/compile_fail/invalid_authored_struct_literal.rs:11:48
   |
11 |     let _declarations = AuthoredDeclarations { values: Vec::new() };
   |                                                ^^^^^^ private field
